fixed z-index on css

--- a/static/css/prism.css
+++ b/static/css/prism.css
@@ -86,6 +86,7 @@ https://prismjs.com/download.html#themes=prism-tomorrow&languages=clike+javascri
 pre[data-line] {
     position: relative;
     padding: 1em 0 1em 3em;
+    z-index: 1;
 }
 
 .line-highlight {
@@ -96,8 +97,8 @@ pre[data-line] {
     margin-top: 1em;
     /* Same as .prism’s padding-top */
 
-    background: /* not changed */ #706000;
-    opacity: 40%;
+    background: /* not changed */ #160077;
+    z-index: -1;
 
     pointer-events: none;
 
@@ -105,11 +106,15 @@ pre[data-line] {
     white-space: pre;
 }
 
+pre[data-line] code {
+    background: none;
+}
+
 @media print {
     .line-highlight {
         /*
           * This will prevent browsers from replacing the background color with white.
-          * It's necessary because the element is layered on top of the displayed code.
+          * It's necessary because the element is layered under the displayed code.
           */
         -webkit-print-color-adjust: exact;
         color-adjust: exact;
@@ -125,7 +130,7 @@ pre[id].linkable-line-numbers span.line-numbers-rows>span:before {
 }
 
 pre[id].linkable-line-numbers span.line-numbers-rows>span:hover:before {
-    background-color: /* not changed */ #706000;
+    background-color: /* not changed */ #160077;
 }
 
 pre[class*="language-"].line-numbers {
@@ -172,7 +177,7 @@ pre[class*="language-"].line-numbers>code {
 }
 
 .token a {
-    color: inherit!important;
+    color: inherit !important;
 }
 
 div.code-toolbar {
@@ -359,6 +364,7 @@ https://prismjs.com/download.html#themes=prism-tomorrow&languages=clike+javascri
 pre[data-line] {
     position: relative;
     padding: 1em 0 1em 3em;
+    z-index: 1;
 }
 
 .line-highlight {
@@ -369,8 +375,8 @@ pre[data-line] {
     margin-top: 1em;
     /* Same as .prism’s padding-top */
 
-    background: /* #706000 */ #dbbc00;
-    opacity: 40%;
+    background: /* #160077 */ #2700d4;
+    z-index: -1;
 
     pointer-events: none;
 
@@ -378,11 +384,15 @@ pre[data-line] {
     white-space: pre;
 }
 
+pre[data-line] code {
+    background: none;
+}
+
 @media print {
     .line-highlight {
         /*
           * This will prevent browsers from replacing the background color with white.
-          * It's necessary because the element is layered on top of the displayed code.
+          * It's necessary because the element is layered under the displayed code.
           */
         -webkit-print-color-adjust: exact;
         color-adjust: exact;
@@ -398,7 +408,7 @@ pre[id].linkable-line-numbers span.line-numbers-rows>span:before {
 }
 
 pre[id].linkable-line-numbers span.line-numbers-rows>span:hover:before {
-    background-color: /* #706000 */ #dbbc00;
+    background-color: /* #160077 */ #2700d4;
 }
 
 pre[class*="language-"].line-numbers {
@@ -445,7 +455,7 @@ pre[class*="language-"].line-numbers>code {
 }
 
 .token a {
-    color: inherit!important;
+    color: inherit !important;
 }
 
 div.code-toolbar {
